Migration from version 5 of junit to version 4